# ComfyUI-OpenToonzLineTools

./: .gitignore  README.ko.md  README.md  __init__.py  pyproject.toml  requirements.txt
docs/: architecture.ko.md  architecture.md  parameter_guide.ko.md  parameter_guide.md  visual_pipeline.ko.md  visual_pipeline.md
docs/engineering-discipline/plans/: 2026-05-22-opentoonz-line-tools.md
docs/experiments/: colorization_comparison.ko.md  colorization_comparison.md
examples/: opentoonz_line_tools_basic_api.json  opentoonz_line_tools_basic_ui.json  pipeline_settings.json
opentoonz_line_tools/: __init__.py  autoclose.py  cleanup.py  nodes.py  regions.py
scripts/: evaluate_research_images.py  run_colorization_comparison.py
tests/: test_line_tools.py
